Fix wordwrap

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -223,7 +223,7 @@ a.thread-item:focus {
   font-weight: normal;
   text-transform: none;
   margin: 10px 0 0 0;
-  word-wrap: anywhere;
+  word-break: break-work;
 }
 
 .thread-item .message {
@@ -295,7 +295,7 @@ a.thread-item:focus {
   font-weight: normal;
   text-transform: none;
   margin: 10px 0 0 0;
-  word-wrap: anywhere;
+  word-break: break-work;
 }
 
 .post-item .meta .started-by,
@@ -307,7 +307,7 @@ a.thread-item:focus {
 .post-item .message {
   font-size: 1rem;
   margin: 20px 0 0 0;
-  word-wrap: anywhere;
+  word-break: break-work;
 }
 
 .no-responses {
